syntax = "proto3";

package mizer.settings;

service SettingsApi {
  rpc LoadSettings (RequestSettings) returns (Settings) {}
  rpc SaveSettings (Settings) returns (Settings) {}
}

message RequestSettings {}

message Settings {
  Hotkeys hotkeys = 1;
  PathSettings paths = 2;
  General general = 3;
}

message PathSettings {
  string midi_device_profiles = 1;
  optional string open_fixture_library = 2;
  optional string qlcplus = 3;
  optional string gdtf = 4;
  optional string mizer = 5;
}

message Hotkeys {
  map<string, string> global = 1;
  map<string, string> layouts = 2;
  map<string, string> programmer = 3;
  map<string, string> nodes = 4;
  map<string, string> patch = 5;
  map<string, string> sequencer = 6;
  map<string, string> plan = 7;
  map<string, string> effects = 8;
}

message General {
  string language = 1;
}
